# cs344

./: .gitignore  CMakeLists.txt  README.md
Problem Sets/Problem Set 1/: CMakeLists.txt  HW1  Makefile  student_func.cu
Problem Sets/Problem Set 2/: CMakeLists.txt  HW2  reference_calc.cpp  student_func.cu
Problem Sets/Problem Set 2/archive/: CMakeLists.txt  Makefile
Problem Sets/Problem Set 2/buid/: CMakeCache.txt  HW2  Makefile  cmake_install.cmake
Problem Sets/Problem Set 3/: CMakeLists.txt  Makefile  main.cpp  readme.md  student_func.cu
Problem Sets/Problem Set 4/: CMakeLists.txt
Problem Sets/Problem Set 5/: CMakeLists.txt
Problem Sets/Problem Set 6/: CMakeLists.txt
